src/components/sections/time-travel/overboard-story/overboard-store/overboard-store.module.scss
.overboard-store {
  position: relative;
  display: grid;
  grid-template-rows: auto auto;
  align-content: center;
  padding: 64px;
  border-radius: 20px;
  background-color: #000;
  overflow: hidden;
  -webkit-mask-image: -webkit-radial-gradient(circle, white 100%, black 100%);
  pointer-events: none;
  min-height: 100%;
  max-height: 100%;

  &.mode-purchase {
    .store-inner {
      .button-wrapper {
        opacity: 1;
      }

      .overboard-wrapper {
        transform: translateY(-30px);
      }
    }
  }

  &.mode-color-picker {
    .store-inner {
      .color-picker {
        opacity: 1;
        margin-bottom: 12px;
      }

      .overboard-wrapper {
        transform: translateY(-20px);
      }
    }
  }

  &.mode-full {
    .logo {
      opacity: 1;
    }

    .store-inner {
      transform: translateY(23%);

      .button-wrapper,
      .color-picker {
        opacity: 1;
      }

      .overboard-wrapper {
        transform: translateY(-30px);
      }
    }
  }

  .underlay {
    position: absolute;
    inset: 0;
    z-index: var(--z-index-0);

    .layer {
      position: absolute;
      inset: 0;
    }
  }

  .logo {
    display: block;
    width: 100%;
    opacity: 0;
    position: absolute;
    top: 0;
    transform: translateY(-75%);
  }

  .store-inner {
    width: 100%;
    height: 100%;
    position: relative;

    .overboard-wrapper {
      max-width: max-content;
      display: block;
      transition: transform var(--duration-fast) linear;
      z-index: 1;
      width: 100%;
      min-width: max(100%, 180px);
    }

    .color-picker {
      opacity: 0;
      position: absolute;
      bottom: 0;
      display: flex;
      justify-content: center;
      left: 50%;
      transform: translate(-50%, 20px) scale(0.9);
    }

    .button-wrapper {
      opacity: 0;
      display: block;
      position: absolute;
      bottom: 0;
      left: 50%;
      margin: 0 auto;
      transform: translate(-50%, -50%);

      .purchase {
        --glow: rgb(255 99 228 / 50%);

        overflow: hidden;
        position: relative;
        display: block;
        background: var(--color-white);
        padding: 12px;
        min-width: 120px;
        border-radius: var(--border-radius-full);
        box-shadow: 0 0 16px var(--glow), 0 0 15px var(--glow),
          0 0 5px var(--glow);
        transition-property: transform, background;
        transition-duration: var(--duration-fast);
        transition-timing-function: linear;

        &:active,
        &.active {
          transform: scale(0.95);
        }

        &.error {
          background: var(--color-pink-crayon);
          color: var(--color-white);

          --glow: rgb(244 28 82 / 50%);

          .content {
            color: #fff;
          }
        }

        &:disabled {
          cursor: not-allowed;
        }

        &.loading {
          .content {
            transform: translateY(-20px) rotateX(-45deg);
            opacity: 0;
          }

          .loader {
            --rotate-x: 0deg;
            --translate-y: 0px;

            opacity: 1;
          }
        }

        .content {
          color: #000;
          display: block;
        }

        .loader {
          --rotate-x: 45deg;
          --rotate-z: 0deg;
          --translate-y: 20px;
          --play-state: running;

          display: block;
          position: absolute;
          width: 56px;
          height: 56px;
          top: 50%;
          left: 50%;
          transform: translate(-50%, calc(-50% + var(--translate-y)))
            rotateX(var(--rotate-x)) rotateZ(var(--rotate-z));
          opacity: 0;

          &::after {
            display: block;
            content: '';
            width: 100%;
            height: 100%;
            animation: loading var(--duration-long) linear infinite;
            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cpath fill='%2323000' d='M73 50c0-12.7-10.3-23-23-23S27 37.3 27 50 M30.9 50c0-10.5 8.5-19.1 19.1-19.1S69.1 39.5 69.1 50'%3E%3C/path%3E%3C/svg%3E");
            animation-play-state: var(--play-state);
          }
        }

        .content,
        .loader {
          transition-property: transform, opacity;
          transition-duration: var(--duration-fast);
          transition-timing-function: ease-out;
        }
      }
    }
  }
}

.animated-grid {
  --glow: #0024a5;
  --grid-color: rgb(255 255 255 / 0.3);
  --grid-height: 420px;
  --grid-width: 100%;

  display: flex;
  align-items: flex-end;
  height: 100%;
  width: 100%;
  position: relative;

  .grid {
    width: var(--grid-width);
    height: var(--grid-height);
    overflow: hidden;
    perspective: calc(var(--grid-height) * 0.75);
    position: absolute;
    transform: translateX(-50%);
    left: 50%;
    min-width: 1361px;
  }

  .grid-fade {
    width: 100%;
    height: 100%;
    position: absolute;
    z-index: 0;
    background: linear-gradient(180deg, rgb(4 3 54 / 0) 0%, #040336 61.41%);
  }

  .glow {
    filter: blur(120px);
    background-color: var(--glow);
    width: var(--grid-width);
    height: 400px;
    position: fixed;
    left: 0;
    bottom: 0;
    z-index: 0;
  }

  .grid-lines {
    width: 100%;
    height: 200%;
    background-image: linear-gradient(
        to right,
        var(--grid-color) 1px,
        transparent 0
      ),
      linear-gradient(to bottom, var(--grid-color) 1px, transparent 0);
    background-size: 35.8px 15px;
    background-repeat: repeat;
    transform-origin: -100% 0 0;
    transform: rotateX(45deg) translateY(0%);
    animation: play 20s linear infinite;
  }
}

@keyframes loading {
  0% {
    transform: rotateZ(0deg);
  }

  100% {
    transform: rotateZ(360deg);
  }
}

@keyframes play {
  0% {
    transform: rotateX(45deg) translateY(0);
  }

  100% {
    transform: rotateX(45deg) translateY(-50%);
  }
}

